Add article. Update pipeline.

--- a/slides/header/metadata.tex
+++ b/slides/header/metadata.tex
@@ -11,7 +11,7 @@
 
 \author[I. Rohrbach, N. Schramm]{Ines Rohrbach, Nico Schramm}
 
-\titlegraphic{\flushright\includegraphics[width=2cm]{assets/htwk_logo.png}}
+\titlegraphic{\flushright\includegraphics[width=2cm]{../assets/htwk_logo.png}}
 
 \newcommand{\semester}{WiSe 24/25}
 \newcommand{\shortmodule}{SEES}
