--- a/slides/header/packages.tex
+++ b/slides/header/packages.tex
@@ -7,7 +7,7 @@
 \usepackage{csquotes}
 
 \usepackage[backend=biber, style=numeric]{biblatex}
-\addbibresource{bibliography.bib}
+\addbibresource{../shared/bibliography.bib}
 
 \DefineBibliographyStrings{ngerman}{
     andothers = {et\addabbrvspace al\adddot}
