Add first outline.

--- a/article/content/intro.tex
+++ b/article/content/intro.tex
@@ -2,6 +2,12 @@
 
 \section{Einführung}
 
+Mittels Dezibot~\cite{dezibotteamDezibotDezibot2025}
+
+\subsection{Problemstellung}
+
 \lipsum[1]
 
-\cite{dezibotteamDezibotDezibot2025}
+\subsection{Zielstellung}
+
+\lipsum[1]
