--- a/article/main.tex
+++ b/article/main.tex
@@ -13,6 +13,9 @@
 
 \pagenumbering{arabic}
 \input{content/intro.tex}
+\input{content/structure.tex}
+\input{content/chess_logic.tex}
+\input{content/movement.tex}
 \input{content/conclusion.tex}
 
 \printbibliography[heading=bibintoc]
