Add intro and structure.

--- a/article/content/chess_logic.tex
+++ b/article/content/chess_logic.tex
@@ -1,6 +1,7 @@
 % !TeX root = ../main.tex
 
 \section{Schachstrukturen und -logik}
+\label{sec:chess-logic}
 
 \begin{itemize}
     \item implementierte Klassen etc., ggf. vereinfachtes Klassendiagramm
