--- a/article/content/intro.tex
+++ b/article/content/intro.tex
@@ -2,12 +2,12 @@
 
 \section{Einführung}
 
-Mittels Dezibot~\cite{dezibotteamDezibotDezibot2025}
+Im Modul \emph{Software Entwicklung für Eingebettete Systeme} arbeiten Studierende mit dem Lehr- und Lernroboter \emph{Dezibot 4}~\cite{dezibotteamDezibotDezibot2025}. Dafür soll jedes Team ein eigenes Projekt erarbeiten.
 
-\subsection{Problemstellung}
+In unserem Projekt -- \emph{Embedded Chess Pieces} -- soll zunächst ein Dezibot auf ein Schachbrett gesetzt werden, welches sich wie eine bestimmte Schachfigur verhält. Dabei kann aus allen gängigen Schachfiguren ausgewählt werden, welche der Dezibot anschließend simuliert. Die ausgewählte Figur wird anschließend auf dem Display zur Identifikation angezeigt.
 
-\lipsum[1]
+Dabei können verschiedene Züge angegeben werden, welcher der Dezibot nach einer Validierung auf dem Feld durchführt. Falls der angegebene Zug gegen die Regeln der jeweiligen Figur verstößt, wird dies über die eingebauten LEDs angezeigt.
 
-\subsection{Zielstellung}
+Das entstandene Projekt kann unter \url{https://github.com/nicosrm/24-emb-chess/} eingesehen werden.
 
-\lipsum[1]
+In den folgenden Kapiteln gehen wir genau auf die Projektstruktur und die Schachstrukturen sowie die entsprechende Logik ein. Im nächsten Kapitel beleuchten wir die Bewegung des Roboters genauer, in dem wir die einzelnen Iterationen darlegen. Schlussendlich folgt ein Fazit sowie ein Ausblick, wie dieses Projekt weiterentwickelt werden kann.
