--- a/article/header/packages.tex
+++ b/article/header/packages.tex
@@ -4,7 +4,14 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+
+\usepackage[T1,hyphens]{url}
 \usepackage[htt]{hyphenat}
+
+\usepackage{listings}
+\usepackage[newfloat]{minted}
+\SetupFloatingEnvironment{listing}{name=Quellcode}
+\renewcommand*{\listlistingname}{Quellcodeverzeichnis}
 
 \usepackage{csquotes}
 \usepackage[skip=12pt plus1pt]{parskip}
