--- a/shared/bibliography.bib
+++ b/shared/bibliography.bib
@@ -1,3 +1,11 @@
+@standard{bluetoothsigincBluetoothCoreSpecification2019,
+  title = {Bluetooth {{Core Specification}} v5.1},
+  author = {{Bluetooth SIG, Inc}},
+  date = {2019-01-21},
+  url = {https://www.bluetooth.org/docman/handlers/downloaddoc.ashx?doc_id=457080},
+  langid = {american}
+}
+
 @software{dezibotteamDezibotDezibot2025,
   title = {Dezibot/Dezibot},
   author = {{Dezibot Team}},
@@ -6,4 +14,49 @@
   url = {https://github.com/dezibot/dezibot},
   urldate = {2025-01-27},
   organization = {DEZIBOT}
+}
+
+@online{espressifsystemsshanghaico.ltdFTMExample2024,
+  title = {{{FTM Example}}},
+  author = {{Espressif Systems (Shanghai) Co., Ltd}},
+  date = {2024-11-20},
+  url = {https://github.com/espressif/esp-idf/tree/1c92945f598bd589a1b14dcfe5fd7b62f7d937b0/examples/wifi/ftm},
+  urldate = {2025-03-10},
+  langid = {english},
+  organization = {GitHub}
+}
+
+@online{espressifsystemsshanghaico.ltdMajorFeatureSupport2024,
+  title = {Major {{Feature Support Status}} - {{ESP32}}},
+  author = {{Espressif Systems (Shanghai) Co., Ltd}},
+  date = {2024-10-10},
+  url = {https://github.com/espressif/esp-idf/blob/v5.2.5/docs/en/api-guides/ble/ble-feature-support-status.rst},
+  urldate = {2025-03-10},
+  organization = {ESP-IDF Programming Guide v5.2.5 documentation}
+}
+
+@online{ewaldIRFernbedienungen2019,
+  title = {IR Fernbedienungen},
+  author = {Ewald, Wolfgang},
+  date = {2019-12-10T22:53:34+00:00},
+  url = {https://wolles-elektronikkiste.de/ir-fernbedienungen},
+  urldate = {2025-03-10},
+  langid = {ngerman},
+  organization = {Wolles Elektronikkiste}
+}
+
+@article{fingerleDokumentationDezibot42025,
+  title = {Dokumentation des Dezibot4},
+  author = {Fingerle, Chris-Dominik and Wilfer, Estelle Bianca},
+  date = {2025-03-10},
+  langid = {ngerman}
+}
+
+@online{matplotlibdevelopmentteamScaleInvariantAngle,
+  title = {Scale Invariant Angle Label},
+  author = {{Matplotlib development team}},
+  url = {https://matplotlib.org/stable/gallery/text_labels_and_annotations/angle_annotation.html},
+  urldate = {2025-02-09},
+  langid = {english},
+  organization = {Matplotlib 3.10.0 documentation}
 }
