Fix overflow in bibliography.

--- a/article/header/packages.tex
+++ b/article/header/packages.tex
@@ -19,6 +19,7 @@
 
 \usepackage[backend=biber, style=numeric]{biblatex}
 \addbibresource{../shared/bibliography.bib}
+\setcounter{biburlnumpenalty}{100}
 
 \DefineBibliographyStrings{ngerman}{
     andothers = {et\addabbrvspace al\adddot}
