--- a/article/content/movement.tex
+++ b/article/content/movement.tex
@@ -1,8 +1,10 @@
 % !TeX root = ../main.tex
 
 \section{Bewegung}
+\label{sec:movement}
 
 \subsection{Iteration 1: Vorwärts und 90°-Drehung}
+\label{sec:move-straight-turn}
 
 \subsubsection{Farberkennung}
 
