--- a/article/content/structure.tex
+++ b/article/content/structure.tex
@@ -6,6 +6,7 @@ In diesem Abschnitt wird die finale Projektstruktur erläutert, sowie ein verwor
 
 
 \subsection{Finale Projektstruktur}
+\label{sec:final-project-structure}
 
 Unser Beitrag in diesem Projekt besteht einerseits in der Änderung und Ergänzung der bereits vorhandenen \texttt{dezibot}-Library~\cite{dezibotteamDezibotDezibot2025}, sowie dem Hinzufügen unseres \texttt{EmbeddedChessPieces}-Packages. Letzteres befindet sich nach Vorgaben der Dozenten unter \texttt{example/EmbeddedChessPieces}.
 
